# shad-python

./: README.md
01.2.BasicTypes/tasks/bin_basic/: bin_basic.py
01.2.BasicTypes/tasks/filter_list_by_list/: filter_list_by_list.py
01.2.BasicTypes/tasks/fizz_buzz/: fizz_buzz.py
01.2.BasicTypes/tasks/iterate_me/: iterate_me.py
01.2.BasicTypes/tasks/make_assert/: make_assert.py
01.2.BasicTypes/tasks/merge_lists/: merge_lists.py
01.2.BasicTypes/tasks/middle_value_of_triple/: middle_value_of_triple.py
01.2.BasicTypes/tasks/reverse_list/: reverse_list.py
01.2.BasicTypes_hard/tasks/bin_tricky/: bin_tricky.py
01.2.BasicTypes_hard/tasks/common_type/: common_type.py
01.2.BasicTypes_hard/tasks/common_type_2/: common_type_2.py
02.1.DataStructures_hard/tasks/alphabet/: alphabet.py
03.1.FunctionsStringsIO/tasks/caesar_cipher/: caesar_cipher.py
06.1.ModulesPackagesImport/tasks/basic_module/: setup.cfg
06.1.ModulesPackagesImport/tasks/basic_module/simple_pass_manager/manager/: PasswordManager.py  __init__.py  manager_config.py
06.1.ModulesPackagesImport/tasks/basic_module/simple_pass_manager/utils/: __init__.py
06.1.ModulesPackagesImport/tasks/basic_module/simple_pass_manager/utils/encryption/: __init__.py  encryption.py  encryption_config.py
06.1.ModulesPackagesImport/tasks/basic_module/simple_pass_manager/utils/generation/: __init__.py  generation.py  generation_config.py
06.1.ModulesPackagesImport/tasks/steganography_tool/: pyproject.toml
06.1.ModulesPackagesImport/tasks/steganography_tool/steganography_tool/: __init__.py  cli.py  utils.py
(+52 files in other folders)
