[metadata]
name = simple_pass_manager
version = 0.0.1
author = Iskander Bagautdinov
description = Module that can manage your passwords
author_email = abacaba2004@gmail.com
keywords = password, manager
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3.12

[options]
packages = find:
install_requires =
    cryptography>=43.0.0